# repro-stm32f103-rust-embassy-freeze

./: all_registers.txt  readme.md  rust-toolchain.toml
firmware/: Cargo.toml  firmware_00b176a
firmware/.cargo/: config.toml
firmware/src/: main.rs
frontend/: Cargo.toml
frontend/src/: main.rs
schema/: Cargo.toml
schema/src/: lib.rs
